json index 0 edited

--- a/app/src/main/assets/project_assignment.json
+++ b/app/src/main/assets/project_assignment.json
@@ -1,20 +1,21 @@
 [
-  {"category":"0","cname":"BBA- Acc.."},
-  {"category":"1","cname":"BBA- Eco.."},
-  {"category":"2","cname":"BBA- Fin.."},
-  {"category":"3","cname":"BBA- Mar.."},
-  {"category":"4","cname":"BBA- Eng.."},
-  {"category":"5","cname":"BBA- Maths"},
-  {"category":"6","cname":"MBA- Acc.."},
-  {"category":"7","cname":"MBA- Eco.."},
-  {"category":"8","cname":"MBA- Fin.."},
-  {"category":"9","cname":"MBA- Mar.."},
-  {"category":"10","cname":"MBA- Eng.."},
-  {"category":"11","cname":"MBA- Maths"},
-  {"category":"12","cname":"BSC- EEE"},
-  {"category":"13","cname":"BSC- CSC"},
-  {"category":"14","cname":"BSC- Arc.."},
-  {"category":"15","cname":"MSC- EEE"},
-  {"category":"16","cname":"MSC- CSC"},
-  {"category":"17","cname":"MSC- Arc.."}
+  {"category":"0","cname":"Select Project"},
+  {"category":"1","cname":"BBA- Acc.."},
+  {"category":"2","cname":"BBA- Eco.."},
+  {"category":"3","cname":"BBA- Fin.."},
+  {"category":"4","cname":"BBA- Mar.."},
+  {"category":"5","cname":"BBA- Eng.."},
+  {"category":"6","cname":"BBA- Maths"},
+  {"category":"7","cname":"MBA- Acc.."},
+  {"category":"8","cname":"MBA- Eco.."},
+  {"category":"9","cname":"MBA- Fin.."},
+  {"category":"10","cname":"MBA- Mar.."},
+  {"category":"11","cname":"MBA- Eng.."},
+  {"category":"12","cname":"MBA- Maths"},
+  {"category":"13","cname":"BSC- EEE"},
+  {"category":"14","cname":"BSC- CSC"},
+  {"category":"15","cname":"BSC- Arc.."},
+  {"category":"16","cname":"MSC- EEE"},
+  {"category":"17","cname":"MSC- CSC"},
+  {"category":"18","cname":"MSC- Arc.."}
 ]
