--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,10 @@
         </activity>
         <activity
             android:name=".SignupActivity"
-            android:theme="@style/LoginTheme" />
+            android:theme="@style/SignupTheme" />
         <activity
             android:name=".DashBoard"
-            android:label="@string/title_activity_news_feed"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
