--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.mcxiaoke.volley:library:1.0.18'
+    compile 'com.squareup.picasso:picasso:2.5.0'
 }
