--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'de.hdodenhof:circleimageview:1.2.1'
 }
